# meridian-electronics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
backend/: pyproject.toml  requirements.txt  vercel.json
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  routes.py
backend/app/core/: config.py  logging.py  tracing.py
backend/app/llm/: __init__.py  guardrails.py  orchestrator.py  prompts.py  tools.py
backend/app/mcp/: __init__.py  client.py
backend/app/schemas/: auth.py  chat.py  mcp.py
backend/scripts/: validate_scenarios.py
backend/tests/: test_llm_tools.py  test_mcp_client.py  test_orchestrator_security.py  test_routes.py
docker/: start.sh
docs/: video-notes.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/api/auth/sign-in/: route.ts
frontend/app/api/chat/: route.ts
